--- a/ccg/css/style.css
+++ b/ccg/css/style.css
@@ -434,7 +434,7 @@ nav#tabs { margin-bottom: 15px; }
   justify-content: center;
   width: auto;
   height: 100%;
-  min-width: 20%;
+  min-width: 175px;
   min-height: 0;
 }
 
