--- a/ccg/css/style.css
+++ b/ccg/css/style.css
@@ -83,7 +83,7 @@
   --realm7-color:     #e74c3c;  /* mythical beasts */
   --realm8-color:     #1abc9c;  /* incremental games */
   --realm9-color:     #d4a3b7;  /* spirit familiars */
-  --realm10-color:    #093526;  /* weapons */
+  --realm10-color:    #0e4b37;  /* weapons */
   --realm11-color:    #985112;  /* greek gods */
   --realm12-color:    #a5134d;  /* bosses */
 
